# Sagarair

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
sagarair_app/: hooks.py  modules.txt
sagarair_app/config/: desktop.py  docs.py
sagarair_app/custom/client_script/: Cost incurred Margin Sales order.js  Delivery Notes_List_View_in_Sales_Order.js  Manufacture_Request_in_SO.js  PR_button_in_PO.js  SALES_ORDER_STATUS_UPDATION.js  TOTAL COST CALUCLATION _ SERviCE vISiT.js  TOTAL_SERVICE_COST_CALCULATION.js  To_Pay_calculation.js  Unit Cost _ Work Order.js  email_queue.py  labour_timesheet.js  salary_slip.py  sales_order.js  service_register.js  service_visit_register.js  stock_entry.js  total_Technician_Cost_Calculation_from_Rows.js  work_order.js
sagarair_app/custom_script/request_for_quotation/: request_for_quotation.py
sagarair_app/custom_script/stock_entry/: stock_entry.py
sagarair_app/fixtures/: client_script.json  custom_field.json  doctype.json  print_format.json  property_setter.json  report.json
sagarair_app/public/js/: sales_order.js
sagarair_app/sagarair_app/: total_incured_costs_in_workorder.js  total_values_in_work_order.js  work_order.js  workorder_in_slaes_order_list.js
sagarair_app/sagarair_app/Client_script/: Additional_Costs_in_Work_ORder.js  Cost incurred_Total_Sales_Order.js  Fetching_items_to_Service_Register.js  MAN_DAY_CALCULATION_REVISED.js  Man Days from SALES ORDER TO MR.js  Manufacture_Stock_Entries.js  Profit_percentage_Sales_order.js  REV 2 - EXTRACT_ITEMS_TO_BOM.js  sc_2.js  (+4 more)
sagarair_app/tasks/: biometric.py
(+55 files in other folders)
